Fixed layout shifts

--- a/style.css
+++ b/style.css
@@ -1,35 +1,82 @@
-#embedCodeField1 textarea {
-    width: 100%;
+.embed_logos{
+    
+    margin: 1rem 10rem;
+    
+}
+
+.embed_logos_flex_container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: space-between;
+}
+
+.embed_item{
+    position: relative;
+    background-color: #fff;
+    
+}
+.embed_body{
+    position: absolute;
+    top: 170px;
+    left: 0;
+    display: none;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem 0.5rem;
+    background-color: #fff;
+    border-radius: 0.25rem;
+    z-index: 10;
+    -webkit-box-shadow: 10px 10px 15px -8px rgba(0,0,0,0.52);
+    -moz-box-shadow: 10px 10px 15px -8px rgba(0,0,0,0.52);
+    box-shadow: 10px 10px 15px -8px rgba(0,0,0,0.52);
+}
+.embed_body.active{
+    display: flex;
+    animation: openPopup 200ms ease-in-out;
+}
+
+.embed_logos_textarea{
+    border: 1px solid #c8b291;
+    border-radius: 0.25rem;
+    resize: none;
+    padding: 1rem;
     height: 150px;
-    padding: 10px;
-    margin-top: 10px;
-    box-sizing: border-box;
-    font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
+    width: 250px;
+}
+.embed_logos_textarea:focus{
+    border: 1px solid #2f2e42;
+    outline: none;
+    right: none;
+}
+.embed_logos_textarea.success{
+    border: 1px solid #13d654;
+}
+.embed_copy_button{
+    padding: 13px 15px;
+    background-color:#c8b291 ;
+    color: #fff;
+    border: none;
+    font-weight: bold ;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    transition-duration: 200ms;
+}
+.embed_copy_button:hover{
+    background-color: #2f2e42;
+}
+.embed_copy_button.success{
+    background-color: #13d654;
+}
 
-
-  #embedCodeField2 textarea {
-    width: 100%;
-    height: 150px;
-    padding: 10px;
-    margin-top: 10px;
-    box-sizing: border-box;
-    font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-
-
-
-  #embedCodeField3 textarea {
-    width: 100%;
-    height: 150px;
-    padding: 10px;
-    margin-top: 10px;
-    box-sizing: border-box;
-    font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
+@keyframes openPopup {
+    0% {
+        top:150px;
+        opacity: 0;
+    }
+    
+    100% {
+        top:170px;
+        opacity: 100%;
+    }
+}
